# cpp-oop-assignments

./: .gitignore  CMakeLists.txt  ChemicalElement.cpp  ChemicalElement.hpp  LICENSE  README.md  lexer.cpp  main.cpp  parser.cpp  polynomial.cpp  polynomial.hpp  polynomial_AST.hpp  polynomial_tests.cpp  warehouse_analyzer_test.cpp
include/: ChemicalElement.hpp  lexer.hpp  parser.hpp  polynomial_AST.hpp  product.hpp  token.hpp  warehouse.hpp  warehouse_analyzer.hpp
src/: ChemicalElement.cpp  lexer.cpp  parser.cpp  polynomial_AST.cpp  product.cpp  warehouse.cpp  warehouse_analyzer.cpp
tests/: CMakeLists.txt  ChemicalElementUnitTest.cpp  lexer_test.cpp  parser_test.cpp  polynomial_AST_test.cpp
